JCR-1151: fix JDK 1.4 compilation problem.
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@588723 13f79535-47bb-0310-9956-ffa450edef68